change UI color

--- a/dashboard.html
+++ b/dashboard.html
@@ -19,20 +19,28 @@
             <section id="main-content">
                     <div class="container-wrapper">
                         <div class="container">
-                            <div class="row">
-                                <div class="col-12 mx">
-                                    <div class="user-profile text-center header-container">
-                                        <h2>Profile Detail</h2>
+                            <div class="row header-container pr0 pl0">
+                                <div class="col-6 col-4 mx mt-10">
+                                    <div class="user-profile text-center">
+                                        <div class="user-profile-image">
+                                            <img src="./assets/img/team2.png" alt="" class="img-fluid" style="height: 200px; width: 200px">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-4 mx ml-20 mt-10">
+                                    <div class="general-info">
+                                        <div class="info-bo mb-10">
+                                            <p>Name: Alfred Epictetus</p>
+                                            <p>Date of Birth: May 27th, 1976</p>
+                                            <p>Occupation: Software Developer</p>
+                                            <p>Position: Lead Developer</p>
+                                            <p>Status: Divorced</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row jcc">
-                                <div class="col-4 mx">
-                                    <div class="user-profile-image">
-                                        <img src="./assets/img/team2.png" alt="" class="img-fluid">
-                                    </div>
-                                </div>
-                                <div class="col-7 mx">
+                            <div class = "row jcc">
+                                <div class="col-6 mx">
                                     <div class="contact-info">
                                         <h3 class="text-center subheading mb-10">Contact Information</h3>
                                         <div class="info-box">
@@ -44,21 +52,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row jcc">
-                                <div class="col-5 mx">
-                                    <div class="general-info">
-                                        <h3 class="text-center subheading mb-10">General Information</h3>
-                                        <div class="info-box mb-10">
-                                            <p>Name: Alfred Epictetus</p>
-                                            <p>Date of Birth: May 27th, 1976</p>
-                                            <p>Occupation: Software Developer</p>
-                                            <p>Position: Lead Developer</p>
-                                            <p>Status: Divorced</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-5 mx">
+                                <div class="col-6 mx">
                                     <div class="add-info">
                                         <h3 class="text-center subheading mb-10">Additional Information</h3>
                                         <div class="info-box mb-10">
@@ -70,11 +64,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div><!--row closed-->
                             <div class="row jcc">
-                                <div class="col-12 mx">
-                                    <h3 class="text-center subheading mb-10">Voting History</h3>
-                                </div>
                                 <div class="col-6 mx">
                                     <h4 class="text-center subheading mb-10">Favourite Candidates</h4>
                                     <div class="info-box mb-10">
