--- a/newOffice.html
+++ b/newOffice.html
@@ -20,8 +20,8 @@
                     <div class="container-wrapper">
                         <div class="container">
                             <div class="row">
-                                <div class="col-12 mx">
-                                    <div class="text-center header-container">
+                                <div class="col-12 mx pl0 pr0">
+                                    <div class="text-center header-container section-header">
                                         <h3>New Office Registration</h3>
                                     </div>
                                 </div>
