--- a/politicalOffice.html
+++ b/politicalOffice.html
@@ -20,14 +20,14 @@
                     <div class="container-wrapper">
                         <div class="container">
                             <div class="row">
-                                <div class="col-12 mx">
-                                    <div class="user-profile text-center header-container">
+                                <div class="col-12 mx pl0 pr0">
+                                    <div class="user-profile text-center header-container section-header">
                                         <h2>Vacant Public Office</h2>
                                     </div>
                                 </div>
-                                <div class="col-12 mx">
+                                <div class="col-10 mx">
                                    <div class="addNewParty">
-                                        <a class="btn" href="newOffice.html" style="color:black">Create new office</a>
+                                        <a class="btn create" href="newOffice.html">Create new office</a>
                                    </div>
                                 </div>
                             </div>
