--- a/vote.html
+++ b/vote.html
@@ -20,9 +20,9 @@
                     <div class="container-wrapper">
                         <div class="container">
                             <div class="row">
-                                <div class="col-12 mx">
-                                    <div class="text-center header-container">
-                                        <h3>Active Election</h3>
+                                <div class="col-12 mx pl0 pr0">
+                                    <div class="text-center header-container section-header">
+                                        <h2>Active Election</h2>
                                     </div>
                                 </div>
                             </div>
