--- a/parties.html
+++ b/parties.html
@@ -20,14 +20,14 @@
                     <div class="container-wrapper">
                         <div class="container">
                             <div class="row">
-                                <div class="col-12 mx">
-                                    <div class="text-center header-container">
+                                <div class="col-12 mx pr0 pl0">
+                                    <div class="text-center header-container section-header">
                                         <h2>Registered Political Parties</h2>
                                     </div>
                                 </div>
                                 <div class="col-11 mx">
                                    <div class="addNewParty">
-                                        <a class="btn" href="newParty.html" style="color:black">Create new party</a>
+                                        <a class="btn create" href="newParty.html">Create new party</a>
                                    </div>
                                 </div>
                             </div>
@@ -52,8 +52,8 @@
                                                 <td><img src="./assets/img/pdp.png" alt="PDP logo" style="height: 50px; width: 50px"></td>
                                                 <td>Wadata Plaza, Michael Okpara Way, Zone 5, Wuse, Abuja</td>
                                                 <td>
-                                                    <a href="partyEdit.html">Edit</a>
-                                                    <button class="btn delete" type="submit">Delete</button>
+                                                    <a href="partyEdit.html" class="edit actn">Edit</a>
+                                                    <button class="actn delete" type="submit">Delete</button>
                                                 </td>
                                             </tr>
 
@@ -64,8 +64,8 @@
                                             <td><img src="./assets/img/LP.jpg" alt="PDP logo" style="height: 50px; width: 50px"></td>
                                             <td> Dabo Shopping Mall, 2nd Floor, Plot 73 Ladoke Akintola Boulevard, Garki, Abuja</td>
                                             <td>
-                                                <a href="partyEdit.html">Edit</a>
-                                                <button class="btn delete" type="submit">Delete</button>
+                                                <a href="partyEdit.html" class="edit actn">Edit</a>
+                                                <button class="actn delete" type="submit">Delete</button>
                                             </td>
                                             </tr>
 
@@ -76,8 +76,8 @@
                                             <td><img src="./assets/img/dpp.jpg" alt="DPP logo" style="height: 50px; width: 50px"></td>
                                             <td>No. 1 Nouakchott Street Zone 1, Wuse, Abuja</td>
                                             <td>
-                                                <a href="partyEdit.html">Edit</a>
-                                                <button class="btn delete" type="submit">Delete</button>
+                                                <a href="partyEdit.html" class="edit actn">Edit</a>
+                                                <button class="actn delete" type="submit">Delete</button>
                                             </td>
                                             </tr>
 
@@ -88,8 +88,8 @@
                                                 <td><img src="./assets/img/ppa.gif" alt="PPA logo" style="height: 50px; width: 50px"></td>
                                                 <td>Warri Street, off Emeka Anyoku Street, Area 11, Garki, Abuja</td>
                                                 <td>
-                                                    <a href="partyEdit.html">Edit</a>
-                                                    <button class="btn delete" type="submit">Delete</button>
+                                                    <a href="partyEdit.html" class="edit actn">Edit</a>
+                                                    <button class="actn delete" type="submit">Delete</button>
                                                 </td>
                                             </tr>
 
@@ -100,8 +100,8 @@
                                                 <td><img src="./assets/img/apc.png" alt="APC logo" style="height: 50px; width: 50px"></td>
                                                 <td>40 Blantyre Street, Wuse II; Abuja, Nigeria</td>
                                                 <td>
-                                                    <a href="partyEdit.html">Edit</a>
-                                                    <button class="btn delete" type="submit">Delete</button>
+                                                    <a href="partyEdit.html" class="edit actn">Edit</a>
+                                                    <button class="actn delete" type="submit">Delete</button>
                                                 </td>
                                             </tr>     
                                         </tbody>                                   
