--- a/partyEdit.html
+++ b/partyEdit.html
@@ -20,8 +20,8 @@
             <div class="container-wrapper">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 mx">
-                            <div class="text-center">
+                        <div class="col-12 mx pr0 pl0">
+                            <div class="text-center header-container section-header">
                                 <h3>Edit Party Information</h3>
                             </div>
                         </div>
