--- a/partyEdit.html
+++ b/partyEdit.html
@@ -65,6 +65,6 @@
       </nav>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="test.js"></script>
+      <script src="./assets/js/main.js"></script>
         </body>
 </html>
