--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Politico</title>
 </head>
 <body>
     <header class="default-header">
-        <div class="sticky-wrapper" style="background: transparent">
-            <div class="container">
-                <div class="header-content">
-                    <div class="logo">
-                        <a href="#" rel="noopener noreferrer">Politico</a>
-                    </div>
-                    <nav class="d-flex aic">
-                        <ul class="nav-menu">
-                            <li><a href="signup.html">Signup</a></li>
-                            <li><a href="login.html">Login</a></li>
+            <div class="sticky-header">
+                <div class="container">
+                    <nav class="navbar">
+                        <label for="check-toggle" class="toggleNavbar" id = "toggleNavbar">
+                            <i class="fa fa-bars"></i>
+                        </label>
+                        <a href="#" class="dlogo">Politico</a>
+                        <input type="checkbox" id="check-toggle"></input>
+                        <ul class="navbar-nav" id = "mainNav">
+                            <li><a class="nav-item" href="signup.html">Signup</a></li>
+                            <li><a class="nav-item" href="login.html">Login</a></li>
                         </ul>
-                    </nav>
+                </nav>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
 
     <section class="banner-area relative">
         <div class="overlay overlay-bg"></div>
         <div class="banner">
             <div class="container">
-                <div class="row jcc aic fullscreen">
-                    <div class="col-8 text-center">
+                <div class="row jcc">
+                    <div class="col-12 d-flex aic jcc text-center">
                         <div class="banner-content text-center">
-                            <h1 class="text-uppercase">Ever heard of universal adult suffrage?</h1>
+                            <h1 class="text-uppercase">ONE MAN ONE VOTE</h1>
                         </div>
                     </div>
                 </div>
