--- a/login.html
+++ b/login.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Welcome Back</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
+	<meta charset="UTF-8">
+	    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	    <link rel="stylesheet" href="./assets/css/style.css">
+	<title>Welcome Back</title>
 </head>
 <body>
-    <header class="default-header">
-        <div class="sticky-wrapper" style="background: transparent">
-            <div class="container">
-                <div class="header-content aic jcb d-flex">
-                    <div class="logo">
-                        <a href="index.html" rel="noopener noreferrer">Politico</a>
-                    </div>
-                    <nav class="d-flex aic">
-                            <ul class="nav-menu">
-                                <li><a href="signup.html" rel="noopener noreferrer">Signup</a></li>
-                            </ul>
-                    </nav>
-                    
-                </div>
-            </div>
-        </div>
-    </header>
+	<header class="default-header">
+		<div class="sticky-header">
+			<div class="container">
+				<nav class="navbar">
+	                <label for="check-toggle" class="toggleNavbar" id = "toggleNavbar">
+	                    <i class="fa fa-bars"></i>
+	                </label>
+                	<a href="index.html" class="dlogo">Politico</a>
+                	<input type="checkbox" id="check-toggle"></input>
+                	<ul class="navbar-nav" id = "mainNav">
+	                    <li><a class="nav-item" href="signup.html">Signup</a></li>
+                	</ul>
+            </nav>
+			</div>
+		</div>
+	</header>
 
-    <div id = "form-wrapper">
-        <section class="form-register">
-            <div class="overlay overlay-bg"></div>
+	<main>
+		<section id = "form-wrapper">
             <div class="container">
-                <div class="row fullscreen jcc aic h100">
+                <div class="row jcc aic">
                     <div class="col-6 mx tc">
-                        <div class="smug mb-10">
+                        <div class="mb-10">
                             <h4>Voting is your right, exercise it!!</h4>
                         </div>
                         <div class="form-container">
@@ -54,7 +51,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+    	</section>
+	</main>
 </body>
 </html>
