Fix landing page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <div class="col-12 d-flex aic jcc text-center">
                         <div class="banner-content text-center">
                             <h1 class="text-uppercase">ONE MAN ONE VOTE</h1>
+                            <p>One of the penalties for refusing to participate in politics is that you end up being governed by your inferiors..</p>
                         </div>
                     </div>
                 </div>
