--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                 <div class="row jcc aic">
                     <div class="col-6 mx tc">
                         <div class="mb-10">
-                            <h4>Voting is your right, exercise it!!</h4>
+                            <h3>Welcome Back</h3>
                         </div>
                         <div class="form-container">
                             <form action="" id="regForm" class="form mb-10">
