--- a/passReset.html
+++ b/passReset.html
@@ -19,7 +19,8 @@
                         <a href="index.html" class="dlogo">Politico</a>
                         <input type="checkbox" id="check-toggle"></input>
                         <ul class="navbar-nav" id = "mainNav">
-                            <li><a class="nav-item" href="signup.html">Signup</a></li>
+                            <li><a class="nav-item" href="signup.html">Register</a></li>
+                            <li><a class="nav-item" href="login.html">Login</a></li>
                         </ul>
                 </nav>
                 </div>
