--- a/electionResult.html
+++ b/electionResult.html
@@ -144,6 +144,7 @@
             <li><a href="contestants.html">Contestants</a></li>
             <li><a href="electionResult.html">Results</a></li>
             <li><a href="vote.html">Vote</a></li>
+            <li><a href="index.html">Logout</a></li>
       </nav>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
