--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Politico</title>
 </head>
@@ -19,8 +19,9 @@
                         <a href="#" class="dlogo">Politico</a>
                         <input type="checkbox" id="check-toggle"></input>
                         <ul class="navbar-nav" id = "mainNav">
-                            <li><a class="nav-item" href="signup.html">Signup</a></li>
+                            <li><a class="nav-item" href="signup.html">Register</a></li>
                             <li><a class="nav-item" href="login.html">Login</a></li>
+                            <li><a class="nav-item" href="#about">About</a></li>
                         </ul>
                 </nav>
                 </div>
@@ -31,16 +32,68 @@
         <div class="overlay overlay-bg"></div>
         <div class="banner">
             <div class="container">
-                <div class="row jcc">
-                    <div class="col-12 d-flex aic jcc text-center">
-                        <div class="banner-content text-center">
-                            <h1 class="text-uppercase">ONE MAN ONE VOTE</h1>
-                            <p>One of the penalties for refusing to participate in politics is that you end up being governed by your inferiors..</p>
-                        </div>
-                    </div>
-                </div>
+                <div class="row jcc aic experi">
+                  <div class="banner-content aic jcc text-center br">
+                    <h1>One man one vote</h1>
+                    <p>Somewhere inside of all of us is the power to change the world.</p>
+                    <a href="signup.html" class="btn btn-primary mt-10">Get Started</a>
+                  </div>
+                </div><!--row closed-->
             </div>
         </div>
     </section>
+
+    <section id="about">
+        <div class="polling-info">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 text-center feature br">
+                        <i class="fa fa-registered icon"></i>
+                        <h3>Register to Vote</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eius a inventore aliquam non et aspernatur, iste blanditiis architecto numquam quidem totam minima minus quisquam. Id impedit delectus animi soluta iste dolor inventore  Praesentium?</p>
+                    </div>
+                    <div class="col-4 text-center feature br">
+                        <i class="fas fa-vote-yea icon"></i>
+                        <h3>Stand for Election</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minus ea accusantium officiis aspernatur modi voluptatum possimus doloremque eum temporibus ipsum itaque eos vitae optio mollitia tenetur dicta nihil dolorum nam exercitationem velit. Quibusdam, suscipit?</p>
+                    </div>
+                    <div class="col-4 text-center feature br">
+                        <i class="fas fa-poll icon"></i>
+                        <h3>Get Result</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At exercitationem magni ipsum, impedit sit cum vel?  esse quia necessitatibus earum autem ad praesentium facere, amet modi exercitationem numquam expedita asperiores repellendus laboriosam cupiditate quasi.</p>
+                    </div>
+                </div><!--row closed-->
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container text-center">
+           <div class="row">
+                <div class="col-4">
+                    <h4>FAQ</h4>
+                    <ul>
+                        <li><a href="#">Registration</a></li>
+                        <li><a href="#">Voting</a></li>
+                        <li><a href="#">Political Entities</a></li>
+                    </ul>
+                </div>
+                <div class="col-4">
+                    <h4>Media</h4>
+                    <ul>
+                        <li><a href="#"><i class="fab fa-youtube"> YouTube</i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter-square"> Twitter</i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-square"> Facebook</i></a></li>
+                    </ul>
+                </div>
+                <div class="col-4">
+                    <h4>Contact</h4>
+                    <p>Phone: +234 1234 5689</p>
+                    <p>Fax: +234 786 3458</p>
+                    <p>Email: user-info@politico.com</p>
+                </div>
+           </div><!-- row closed-->
+        </div><!-- container closed-->
+    </footer>
 </body>
 </html>
