--- a/politicalOffice.html
+++ b/politicalOffice.html
@@ -104,6 +104,7 @@
             <li><a href="contestants.html">Contestants</a></li>
             <li><a href="electionResult.html">Results</a></li>
             <li><a href="vote.html">Vote</a></li>
+            <li><a href="index.html">Logout</a></li>
         </ul>
       </nav>
 
