--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	    <link rel="stylesheet" href="./assets/css/style.css">
-	<title>Navbar Practice</title>
+	<title>User Registration</title>
 </head>
 <body>
 	<header class="default-header">
