--- a/fullStack/signup.html
+++ b/fullStack/signup.html
@@ -50,7 +50,7 @@
                                     <input type="email" name="email"id = "email"  placeholder="Email Address" onfocus="this.placeholder=''" onblur="this.placeholder ='Email Address'">
                                 </div>
                                 <div class="single-input mb-10">
-                                    <input type="url" name="passport" id = "passporturl" placeholder="Your passport url" onblur="this.placeholder='Your passport url'" onfocus="this.placeholder=''">
+                                    <input type="file" name="passport" id = "passporturl" placeholder="Your passport url" onblur="this.placeholder='Your passport url'" onfocus="this.placeholder=''">
                                 </div>
                                 <div class="single-input mb-10">
                                     <input type="password" name="password" id = "password" placeholder="Your Password" onblur="this.placeholder='Your Password'" onfocus="this.placeholder=''">
@@ -60,7 +60,7 @@
                                 </div>
                             </form>
                             <p>Already have an account?</p>
-                            <a href="login.html">Sign in</a>
+                            <a href="login.html" class="logSign">Sign in</a>
                         </div><!-- form-container closed-->
                     </div>
                 </div>
