--- a/fullStack/UelectionResult.html
+++ b/fullStack/UelectionResult.html
@@ -51,7 +51,7 @@
                                                 <td>
                                                     <ol>
                                                         <li>100</li>
-                                                        <li>389</li>
+                                                        <li class="winner">389</li>
                                                         <li>388</li>
                                                     </ol>
                                                 </td>
@@ -69,7 +69,7 @@
                                             <td>
                                                     <ol>
                                                         <li>100</li>
-                                                        <li>389</li>
+                                                        <li class="winner">389</li>
                                                         <li>388</li>
                                                     </ol>
                                                 </td>
@@ -88,7 +88,7 @@
                                                 <ol>
                                                     <li>100</li>
                                                     <li>389</li>
-                                                    <li>388</li>
+                                                    <li class="winner">768</li>
                                                 </ol>
                                                 </td>
                                             </tr>
@@ -106,7 +106,7 @@
                                                         <ol>
                                                             <li>100</li>
                                                             <li>389</li>
-                                                            <li>388</li>
+                                                            <li class="winner">988</li>
                                                         </ol>
                                                     </td>
                                             </tr>
@@ -123,7 +123,7 @@
                                                 <td>
                                                         <ol>
                                                             <li>100</li>
-                                                            <li>389</li>
+                                                            <li class="winner">899</li>
                                                             <li>388</li>
                                                         </ol>
                                                     </td>
