--- a/fullStack/login.html
+++ b/fullStack/login.html
@@ -46,7 +46,7 @@
                                 </div>
                             </form>
                             <p>Don't have an account?</p>
-                            <a href="signup.html">Create an account</a>
+                            <a href="signup.html" class="logSign">Create an account</a>
                         </div>
                     </div>
                 </div>
