add modal dialog

--- a/fullStack/parties.html
+++ b/fullStack/parties.html
@@ -49,6 +49,22 @@
                                         </tbody>                                   
                                     </table>
                                 </div>
+                                <div id="simpleModal" class="modal">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <span class="closeBtn">&times;</span>
+                                            <h2>Confirmation message</h2>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p>Are you sure you want to delete this political party?</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn" id="confirm">Delete</button>
+                                            <button type="button" class="btn" id="dismiss">Cancel</button>
+                    
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div><!-- container closed-->
                     </div><!--- container-wrapper closed -->
