--- a/UpoliticalOffice.html
+++ b/UpoliticalOffice.html
@@ -41,51 +41,8 @@
                                             </tr>
                                         </thead>
 
-                                        <tbody>
-                                            <tr>
-                                                <td>1</td>
-                                                <td>Governor</td>
-                                                <td>State</td>
-                                                <td>
-                                                    <button class="btn contest" type="submit">Contest</button>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>2</td>
-                                            <td>Governor</td>
-                                            <td>State</td>
-                                            <td>
-                                                <button class="btn contest" type="submit">Contest</button>
-                                            </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>3</td>
-                                            <td>Mayor</td>
-                                            <td>Local</td>
-                                            <td>
-                                                <button class="btn contest" type="submit">Contest</button>
-                                            </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>4</td>
-                                                <td>President</td>
-                                                <td>Federal</td>
-                                                <td>
-                                                    <button class="btn contest" type="submit">Contest</button>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>5</td>
-                                                <td>Senator</td>
-                                                <td>Legislative</td>
-                                                <td>
-                                                    <button class="btn contest" type="submit">Contest</button>
-                                                </td>
-                                            </tr>     
+                                        <tbody id = "office-body">
+                                           
                                         </tbody>                                   
                                     </table>
                                 </div>
@@ -108,5 +65,6 @@
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="./assets/js/main.js"></script>
+      <script src="assets/js/UgetOffice.js"></script>
         </body>
 </html>
