--- a/electionResult.html
+++ b/electionResult.html
@@ -51,7 +51,7 @@
                                                 <td>
                                                     <ol>
                                                         <li>100</li>
-                                                        <li>389</li>
+                                                        <li class="winner">389</li>
                                                         <li>388</li>
                                                     </ol>
                                                 </td>
@@ -69,7 +69,7 @@
                                             <td>
                                                     <ol>
                                                         <li>100</li>
-                                                        <li>389</li>
+                                                        <li class="winner">389</li>
                                                         <li>388</li>
                                                     </ol>
                                                 </td>
@@ -86,8 +86,8 @@
                                             </td>
                                             <td>
                                                 <ol>
+                                                    <li class="winner">389</li>
                                                     <li>100</li>
-                                                    <li>389</li>
                                                     <li>388</li>
                                                 </ol>
                                                 </td>
@@ -106,7 +106,7 @@
                                                         <ol>
                                                             <li>100</li>
                                                             <li>389</li>
-                                                            <li>388</li>
+                                                            <li class="winner">400</li>
                                                         </ol>
                                                     </td>
                                             </tr>
@@ -123,7 +123,7 @@
                                                 <td>
                                                         <ol>
                                                             <li>100</li>
-                                                            <li>389</li>
+                                                            <li class="winner">599</li>
                                                             <li>388</li>
                                                         </ol>
                                                     </td>
@@ -143,7 +143,6 @@
             <li><a class="side" href="politicalOffice.html">Political Office</a></li>
             <li><a href="contestants.html">Contestants</a></li>
             <li><a href="electionResult.html">Results</a></li>
-            <li><a href="vote.html">Vote</a></li>
             <li><a href="index.html">Logout</a></li>
       </nav>
 
