--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
                             <h3>Welcome Back</h3>
                         </div>
                         <div class="form-container">
-                            <form action="" id="regForm" class="form mb-10" method="GET">
+                            <form action="" id="loginForm" class="form mb-10" method="POST">
                                 <div class="single-input mb-10">
                                     <input type="email" name="email" id = "email" placeholder="Email Address" onfocus="this.placeholder=''" onblur="this.placeholder ='Email Address'">
                                 </div>
@@ -42,11 +42,11 @@
                                 </div>
                                 <a href="passReset.html">Forgot password?</a>
                                 <div class="d-flex jcc">
-                                    <input type="button" class="mt-10 aic btn btn-primary text-uppercase" onclick=logUser() value="Login">
+                                    <input type="submit" class="mt-10 aic btn btn-primary text-uppercase" value="Login">
                                 </div>
                             </form>
                             <p>Don't have an account?</p>
-                            <a href="signup.html">Create an account</a>
+                            <a href="signup.html" class="logSign">Create an account</a>
                         </div>
                     </div>
                 </div>
