--- a/signup.html
+++ b/signup.html
@@ -33,39 +33,41 @@
                             <h2>New User Registration</h2>
                         	</div>
                         	<div class="form-container">
-                            <form action="" id="regForm" class="form mb-10">
+                            <form action="" id="regForm" class="form mb-10" method = "POST">
                                 <div class="single-input mb-10">
-                                    <input type="text" name="fname" placeholder="First name " required onfocus="this.placeholder = ''" onblur="this.placeholder = 'First name'">
+                                    <input type="text" name="fname" id = "firstname" placeholder="First name " required onfocus="this.placeholder = ''" onblur="this.placeholder = 'First name'">
                                 </div>
                                 <div class="single-input mb-10">
-                                    <input type="text" name="lName" placeholder="Last name" onblur="this.placeholder='Your last name'" onfocus="this.placeholder=''">
+                                    <input type="text" name="lName" id = "lastname" placeholder="Last name" onblur="this.placeholder='Your last name'" onfocus="this.placeholder=''">
                                 </div>
                                 <div class="single-input mb-10">
-                                    <input type="password" name="oName" placeholder="Other names" onblur="this.placeholder='Other names'" onfocus="this.placeholder=''">
+                                    <input type="text" name="oName" id = "othername" placeholder="Other names" onblur="this.placeholder='Other names'" onfocus="this.placeholder=''">
                                 </div>
                                 <div class="single-input mb-10">
-                                    <input type="tel" name="phoneNum" placeholder="Your phone number" onblur="this.placeholder='Your phone number'" onfocus="this.placeholder=''">
+                                    <input type="tel" name="phoneNum" id = "phoneNum" placeholder="Your phone number" onblur="this.placeholder='Your phone number'" onfocus="this.placeholder=''">
                                 </div>
                                 <div class="single-input mb-10">
-                                    <input type="email" name="email" placeholder="Email Address" onfocus="this.placeholder=''" onblur="this.placeholder ='Email Address'">
+                                    <input type="email" name="email"id = "email"  placeholder="Email Address" onfocus="this.placeholder=''" onblur="this.placeholder ='Email Address'">
                                 </div>
                                 <div class="single-input mb-10">
-                                    <input type="url" name="passport" placeholder="Your passport url" onblur="this.placeholder='Your passport url'" onfocus="this.placeholder=''">
+                                    <input type="file" name="passport" id = "passporturl" placeholder="Your passport url" onblur="this.placeholder='Your passport url'" onfocus="this.placeholder=''">
                                 </div>
                                 <div class="single-input mb-10">
-                                    <input type="password" name="passoword" placeholder="Your Password" onblur="this.placeholder='Your Password'" onfocus="this.placeholder=''">
+                                    <input type="password" name="password" id = "password" placeholder="Your Password" onblur="this.placeholder='Your Password'" onfocus="this.placeholder=''">
                                 </div>
                                 <div class="d-flex jcc">
                                     <button class="mt-10 aic btn btn-primary text-uppercase">Register</button>
                                 </div>
                             </form>
                             <p>Already have an account?</p>
-                            <a href="login.html">Sign in</a>
+                            <a href="login.html" class="logSign">Sign in</a>
                         </div><!-- form-container closed-->
                     </div>
                 </div>
             </div>
     	</section>
-	</main>
+    </main>
+    
+    <script src="assets/js/signup.js"></script>
 </body>
 </html>
