add select button

--- a/Uvote.html
+++ b/Uvote.html
@@ -27,8 +27,44 @@
                                 </div>
                             </div>
                             <div class="row jcc">
-                            <div class="col-10 mx">
-                                <div class="form-check">
+                                    <div class="col-6 mx">
+                                        <div class="form-container">
+                                            <form action="" id="regForm" class="form mb-10">
+                                                <div class="single-input mb-10">
+                                                    <p>Lagos State Governor</p>
+                                                    <select name="officeType" id="officeType" class="mt-10">
+                                                        <option value="" disabled >Select your preferred candidate</option>
+                                                        <option value="federal">Barack Obama</option>
+                                                        <option value="legislative">Mathias Schleiden</option>
+                                                        <option value="state">Anton Van Leeuwenhoek</option>
+                                                    </select>
+                                                </div>
+                                                <div class="d-flex jcc">
+                                                    <button class="mt-10 aic btn-primary text-uppercase">Vote</button>
+                                                </div>
+                                            </form>
+                                        </div><!-- form-container closed-->
+                                    </div>
+                                    <div class="col-6 mx">
+                                            <div class="form-container">
+                                                <form action="" id="regForm" class="form mb-10">
+                                                    <div class="single-input mb-10">
+                                                        <p>Lagos West Senator</p>
+                                                        <select name="officeType" id="officeType" class="mt-10">
+                                                            <option value="" disabled >Select your preferred candidate</option>
+                                                            <option value="federal">Vincent Kompany</option>
+                                                            <option value="legislative">Theodore Schwann</option>
+                                                            <option value="state">Ernest Valverdes</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="d-flex jcc">
+                                                        <button class="mt-10 aic btn-primary text-uppercase">Vote</button>
+                                                    </div>
+                                                </form>
+                                            </div><!-- form-container closed-->
+                                        </div>
+                           <!--  <div class="col-10 mx"> -->
+                                <!-- <div class="form-check">
                                     <p>Alabama Governor</p>
                                     <input type="radio" class="form-check-input" name = "AlabamaG" value="obama">
                                     <label for="" class="form-check-label">Barack Obama</label>
@@ -36,8 +72,8 @@
                                     <label for="" class="form-check-label">Mathias Schleiden</label>
                                     <input type="radio" class="form-check-input" name = "AlabamaG" value="anton">
                                     <label for="" class="form-check-label">Anton Van Leeuwenhoek</label>
-                                </div><!-- form-check closed -->
-                                <div class="form-check">
+                                </div> --><!-- form-check closed -->
+                                <!-- <div class="form-check">
                                     <p>New York Governor</p>
                                     <input type="radio" class="form-check-input" name = "NYG" value="kompany">
                                     <label for="" class="form-check-label">Vincent Kompany</label>
@@ -45,8 +81,8 @@
                                     <label for="" class="form-check-label">Theodore Schwann</label>
                                     <input type="radio" class="form-check-input" name = "NYG" value="valverdes">
                                     <label for="" class="form-check-label">Ernest Valverdes</label>
-                                </div><!-- form-check closed -->
-                                <div class="form-check">
+                                </div> --><!-- form-check closed -->
+                               <!--  <div class="form-check">
                                     <p>New York Mayor</p>
                                     <input type="radio" class="form-check-input" name = "NYM" value="raul">
                                     <label for="" class="form-check-label">Raul Meireless</label>
@@ -54,8 +90,8 @@
                                     <label for="" class="form-check-label">Arsene Wenger</label>
                                     <input type="radio" class="form-check-input" name = "NYM" value="holmes">
                                     <label for="" class="form-check-label">Sherlock Holmes</label>
-                                </div><!-- form-check closed -->
-                                <div class="form-check">
+                                </div> --><!-- form-check closed -->
+                                <!-- <div class="form-check">
                                     <p>United States of America President</p>
                                     <input type="radio" class="form-check-input" name = "USPrexy" value="spallanzani">
                                     <label for="" class="form-check-label">Antonio Spallanzani</label>
@@ -63,8 +99,8 @@
                                     <label for="" class="form-check-label">Mauricio Pochettino</label>
                                     <input type="radio" class="form-check-input" name = "USPrexy" value="gago">
                                     <label for="" class="form-check-label">Fernando Gago</label>
-                                </div><!-- form-check closed -->
-                                <div class="form-check">
+                                </div> --><!-- form-check closed -->
+                               <!--  <div class="form-check">
                                     <p>Vermont Senator</p>
                                     <input type="radio" class="form-check-input" name = "vermontSenate" value="fabricio">
                                     <label for="" class="form-check-label">Fabricio Maurice</label>
@@ -72,10 +108,10 @@
                                     <label for="" class="form-check-label">Geiger Muller</label>
                                     <input type="radio" class="form-check-input" name = "vermontSenate" value="stapleton">
                                     <label for="" class="form-check-label">Jack Stapleton</label>
-                                </div><!-- form-check closed -->
-                                <div class="d-flex jcc col-4 mx">
+                                </div> --><!-- form-check closed -->
+                               <!--  <div class="d-flex jcc col-4 mx">
                                     <button class="mt-10 aic btn-primary text-uppercase">Vote</button>
-                                </div>
+                                </div> -->
                             </div><!-- mx closed -->
                              </div><!--row closed -->
                         </div><!-- container closed-->
