add class to forgot password

--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                                 <div class="single-input mb-10">
                                     <input type="password" name="password" id = "password" placeholder="Your Password" onblur="this.placeholder='Your Password'" onfocus="this.placeholder=''">
                                 </div>
-                                <a href="passReset.html">Forgot password?</a>
+                                <a href="passReset.html" class="logSign">Forgot password?</a>
                                 <div class="d-flex jcc">
                                     <input type="submit" class="mt-10 aic btn btn-primary text-uppercase" value="Login">
                                 </div>
