add select attribute

--- a/Uvote.html
+++ b/Uvote.html
@@ -33,7 +33,7 @@
                                                 <div class="single-input mb-10">
                                                     <p>Lagos State Governor</p>
                                                     <select name="officeType" id="officeType" class="mt-10">
-                                                        <option value="" disabled >Select your preferred candidate</option>
+                                                        <option value="" selected>Select your preferred candidate</option>
                                                         <option value="federal">Barack Obama</option>
                                                         <option value="legislative">Mathias Schleiden</option>
                                                         <option value="state">Anton Van Leeuwenhoek</option>
@@ -51,7 +51,7 @@
                                                     <div class="single-input mb-10">
                                                         <p>Lagos West Senator</p>
                                                         <select name="officeType" id="officeType" class="mt-10">
-                                                            <option value="" disabled >Select your preferred candidate</option>
+                                                            <option value="" selected >Select your preferred candidate</option>
                                                             <option value="federal">Vincent Kompany</option>
                                                             <option value="legislative">Theodore Schwann</option>
                                                             <option value="state">Ernest Valverdes</option>
